syntax = "proto3";

package heartbeat;

service HeartbeatService {
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
}

message HeartbeatRequest {
  string client_id = 1;
}

message HeartbeatResponse {
  string status = 1;
}